--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         var socket = io();
 
         socket.on("hola", function(){
-            console.log("Enviando hola desde cliente"+new Date().getSeconds()+':'+new Date().getMilliseconds());
+            console.log("Recibido hola desde servidor "+new Date().getSeconds()+':'+new Date().getMilliseconds());
+            console.log("Respondiendo hola desde cliente "+new Date().getSeconds()+':'+new Date().getMilliseconds());
             socket.emit("hola servidor");
         });
 
         socket.on("adios cliente", function(){
-            console.log("Adios cliente recibido "+new Date().getSeconds()+':'+new Date().getMilliseconds());
+            console.log("Recibido adios desde servidor "+new Date().getSeconds()+':'+new Date().getMilliseconds());
         });
 
     </script>
